  tests are found or any test fails
  (friebe)
- Changed ClassDoc::sourceFile() and PackageDoc::sourceFile() in 
  text.doclet to return io.File objects instead of strings
  (friebe)
- Refactored scriptlet.workflow.casters.ToValidXMLString into the
  checker scriptlet.workflow.checkers.WellformedXMLChecker
  (kiesel)

Features
~~~~~~~~
- Added lang.Process::getArguments() which returns command line arguments
  passed to the process as an array of strings.
  (friebe)
- Support data type "varbinary" in MySQLDBAdapter class
  (hinckel)
- Made XML_ILLEGAL_CHARS a xml.Node class constant
  (kiesel)
- Added accessors for underlying output stream to io.streams.StringWriter
  http://news.xp-framework.net/article/306/2009/07/12/
  (friebe)
- Made rdbms.ConnectionManager initialize rdbms.DBConnection lazily, so
  that configuring with unsupported protocols only ends in exceptions
  when that connection is actually requested.
  (kiesel, friebe)
- Added Microsoft SQL server support to rdbms API (depending either on 
  "mssql" or "sqlsrv" PHP extensions).
  (friebe)
- Added InterBase/Firebird support to rdbms API (depending on "ibase"
  PHP extension).
  (friebe)
- Extended error handling mechanism to provide class and method information
  for E_NOTICE and E_WARNING stacktrace elements.
  (kiesel)
- Made only those access implementations available in rdbms.DriverManager 
  where the correct driver is loaded 
  http://news.xp-framework.net/article/303/2009/06/09
  (friebe)

RFCs
~~~~
- Implemented RFC #0159 - Deadlock handling
  http://news.xp-framework.net/article/304/2009/06/16/
  (friebe)

Bugfixes
~~~~~~~~
- Fixed bug #38 - Annotation parsing fails for strings containing "=" 
  (friebe)
- Removed superfluous newline from message string in compoundMessage()
  of HttpScriptletException class
  (hinckel)
- Fixed xml.dom.Document to work as advertised (getElementById() and
  getElementsByName() methods).
  (Rene Patzer)
- Fixed xp.codegen.esdl.Generator so it does work now